--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="tab-contents  active-tab" id="skills">
                         <ul>
-                            <li><span>Web Technologies</span><br> Front End Websites(HTML 5, CSS, JavaScript, bbotstrap)</li>
+                            <li><span>Web Technologies</span><br> Front End Websites(HTML 5, CSS, JavaScript, bootstrap)</li>
                             <li><span>core Java</span> </li>
                             <li><span>SQL (Structured Query Language)</span><br> DataBase</li>
                         </ul>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2018 - 2022</span> <br> BE in CSE (6.9 CGPA)) at Karavali Institute Of Technology</li>
+                            <li><span>2018 - 2022</span> <br> BE in CSE (6.9 CGPA) at Karavali Institute Of Technology</li>
                             <li><span>2015 - 2017</span><br> PUC (62 %) at SVG's Vishwaprajna composite Pu College </li>
                             <li><span>2005 - 2015</span><br> SSLC (78 %) at St Anne's Hgh School</li>
                         </ul>
