--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <img src="images/dry bean3.png" >
                         <div class="layer">
                             <h3>Dry Bean Classification</h3>
-                            <p>Machine learning Classification problem to classify 7 types of dry beans. In this project different machine learning algorithms were used to classify the most well-known 7 types of beans in Turkey; Barbunya, Bombay, Cali, Dermason, Horoz, Seker and Sira, depending ONLY on dimension and shape features of bean varieties with no external discriminatory features. Multilayer Perceptrons, Decision Tree, Xgboost, SVM and Random Forest classifiers were trained and resulting F1-score 0.956 on the training data, 0.935 on validation set and 0.938 on the final testing set.</p>
+                            <p>Machine learning Classification to classify 7 types of dry beans. In this project different machine learning algorithms were used to classify the most well-known 7 types of beans in Turkey; Barbunya, Bombay, Cali, Dermason, Horoz, Seker and Sira, depending ONLY on dimension and shape features of bean varieties with no external discriminatory features. Multilayer Perceptrons, Decision Tree, Xgboost, SVM and Random Forest classifiers were trained and resulting F1-score 0.956 on the training data, 0.935 on validation set and 0.938 on the final testing set.</p>
                             <!------- <a href="#"><i class=" fas fa-external-link-alt"></i></a>---->
                         </div>
                     </div>
