--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/adopt me dog.png" >
+                        <img src="images/adopt me dog.png" alt="dog">
                         <div class="layer">
                             <h3>Furry Paw</h3>
                             <p>This is my ongoing project, Basically it is a website to save abondand puppies in the streets. Using this websites if anyone see any puppies nearby they can add the details of puppies. Through the same interface or website other people can also see the details of puppies that was added by others, if they want they can adopt the puppies as well by getting the details of the puppy.  </p>
