--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                    <h1 class="sub-title" >Projects</h1> 
                    <div class="work-list">
                     <div class="work">
-                        <img src="images/phishing3.png" >
+                        <img src="images/phishing3.png" alt="Phishing" >
                         <div class="layer">
                             <h3>Phishing Website Detection</h3>
                             <p>Now a days phishing Websites are becoming major problems, to gather information that can help classify websites for detecting phishing sites. A crawler was developed that crawled 7900 URLs from AlexaRank portal and also employed Phishtank dataset to measure the efficiency of the proposed URL detector. Using the help of algorithms like SVM, XG Boost, Decision tree, Random Forest. A total of 7900 malicious URLS were detected using the proposed URL detector. It has achieved better accuracy and F1—score with limited amount of time.  </p>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/dry bean3.png" >
+                        <img src="images/dry bean3.png"  alt="Dry Beans">
                         <div class="layer">
                             <h3>Dry Bean Classification</h3>
                             <p>Machine learning Classification to classify 7 types of dry beans. In this project different machine learning algorithms were used to classify the most well-known 7 types of beans in Turkey; Barbunya, Bombay, Cali, Dermason, Horoz, Seker and Sira, depending ONLY on dimension and shape features of bean varieties with no external discriminatory features. Multilayer Perceptrons, Decision Tree, Xgboost, SVM and Random Forest classifiers were trained and resulting F1-score 0.956 on the training data, 0.935 on validation set and 0.938 on the final testing set.</p>
