--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="tab-contents  active-tab" id="skills">
                         <ul>
-                            <li><span>Web Technologies</span><br> Front End Websites(HTML 5, CSS, JavaScript, bootstrap)</li>
+                            <li><span>Web Technologies</span><br> Front End Websites(HTML 5, CSS, JavaScript, bootstrap, reactJS)</li>
                             <li><span>core Java</span> </li>
                             <li><span>SQL (Structured Query Language)</span><br> DataBase</li>
                         </ul>
