--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <img src="images/dry bean3.png"  alt="Dry Beans">
                         <div class="layer">
                             <h3>Dry Bean Classification</h3>
-                            <p>Machine learning Classification to classify 7 types of dry beans. In this project different machine learning algorithms were used to classify the most well-known 7 types of beans in Turkey; Barbunya, Bombay, Cali, Dermason, Horoz, Seker and Sira, depending ONLY on dimension and shape features of bean varieties with no external discriminatory features. Multilayer Perceptrons, Decision Tree, Xgboost, SVM and Random Forest classifiers were trained and resulting F1-score 0.956.</p>
+                            <p>Machine learning Classification to classify 7 types of dry beans. In this project different machine learning algorithms were used to classify the most well-known 7 types of beans in Turkey; Barbunya, Bombay, Cali, Dermason, Horoz, Seker and Sira, depending ONLY on dimension and shape features of bean varieties with no external discriminatory features.</p>
                              <a href="https://github.com/HruthikGowda1999/Dry-Bean-Classification-Using-MachineLearning"><i class=" fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
