--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <a href="https://github.com/HruthikGowda1999"><i class="fa-brands fa-github"></i></a>
                         
                     </div>
-                    <a href="images/Resume- HRUTHIK K Y.pdf"  download class="btn btn2">Download CV</a>
+                    <a href="images/Resume- HRUTHIK K Y.pdf"  download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-Right">
                     <form name="submit-to-google-sheet">
